# payflow

./: .env.example  .gitattributes  .gitignore  docker-compose.yml
analytics_service/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
analytics_service/alembic/: env.py
analytics_service/alembic/versions/: 67c1abbacb6a_initial_analytics_models.py
analytics_service/src/app/: faststream_app.py  main.py
analytics_service/src/app/api/: __init__.py  exception_handlers.py
analytics_service/src/app/api/v1/: __init__.py  analytics.py
analytics_service/src/app/consumer/: kafka_consumer.py
analytics_service/src/app/core/: logging.py  settings.py
analytics_service/src/app/core/di/: provider.py
analytics_service/src/app/core/exceptions/: __init__.py  payment.py
analytics_service/src/app/core/middleware/: request_id.py
analytics_service/src/app/models/: __init__.py  base.py  payments.py  processed_events.py
analytics_service/src/app/repositories/: payments.py  processed_events.py
analytics_service/src/app/schemas/: __init__.py  analytics.py  events.py  payments.py
analytics_service/src/app/services/: analytics.py  cache.py  deduplication.py  event_handler.py  payment_projection.py
analytics_service/src/tests/: conftest.py  test_analytics_service.py  test_cache.py  test_deduplication.py  test_event_handler.py  test_faststream_consumer.py  test_integration_event_projection.py  test_payment_projection.py
dlq_watcher/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
dlq_watcher/src/app/application/ports/: __init__.py  alert_sink.py  dto.py  metrics.py
dlq_watcher/src/app/application/services/: __init__.py  dlq_service.py
dlq_watcher/src/app/core/: settings.py
dlq_watcher/src/app/entrypoints/messaging/: watcher.py
dlq_watcher/src/app/infrastructure/di/: __init__.py  provider.py
dlq_watcher/src/app/infrastructure/observability/: __init__.py  alert_sink.py  metrics.py
dlq_watcher/src/tests/: conftest.py  test_dlq_service.py
orchestrator_service/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
orchestrator_service/alembic/versions/: 48bf76f32db7_init_saga_schema.py  9c4d1e7a2f50_generic_saga_core.py
orchestrator_service/src/app/application/ports/: outbox_publisher.py  repositories.py
orchestrator_service/src/app/application/sagas/: order_fulfillment.py
orchestrator_service/src/app/application/services/: outbox_relay.py  saga_executor.py  saga_poller.py
orchestrator_service/src/app/core/: settings.py
orchestrator_service/src/app/domain/: definitions.py  outbox.py  processed_events.py  saga.py
orchestrator_service/src/app/domain/exceptions/: saga.py
orchestrator_service/src/app/entrypoints/http/: dependencies.py  main.py
orchestrator_service/src/app/entrypoints/messaging/: consumer.py  poller.py  relay.py  worker_runtime.py
orchestrator_service/src/app/infrastructure/brokers/: adapters.py
orchestrator_service/src/app/infrastructure/di/: __init__.py  outbox_scope.py  poller_scope.py  provider.py
orchestrator_service/src/app/infrastructure/observability/: __init__.py  metrics.py
orchestrator_service/src/tests/: conftest.py  test_admin_api.py  test_definitions.py  test_saga_executor.py
order_service/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
order_service/alembic/versions/: 5b8e2d0c7a41_unified_outbox_no_saga_id.py  c6f15ae45811_init_order_schema.py
order_service/src/app/application/ports/: cache.py  repositories.py  uow.py
order_service/src/app/application/services/: order_service.py  outbox_relay.py  saga_events.py
order_service/src/app/core/: logging.py  settings.py
order_service/src/app/domain/: clock.py  orders.py  outbox.py
order_service/src/app/domain/exceptions/: orders.py
order_service/src/app/entrypoints/http/: main.py  security.py
order_service/src/app/entrypoints/messaging/: consumer.py  relay.py
order_service/src/app/infrastructure/brokers/: adapters.py
order_service/src/app/infrastructure/cache/: redis_order_cache.py
order_service/src/app/infrastructure/di/: __init__.py  provider.py
order_service/src/tests/: conftest.py  test_contracts.py  test_order_cache.py  test_order_service.py  test_saga_events.py
payment_service/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
payment_service/alembic/: env.py
payment_service/alembic/versions/: 2cc9fca805a7_update_payment_schema.py  6da30aa906f2_update_outbox_schema.py  b7e2d4a91c53_add_outbox_attempts_tracking.py  c3f1a7d24e05_add_command_correlations.py  d561e880f8d7_init.py
payment_service/src/app/: main.py  taskiq.py  worker.py
payment_service/src/app/api/: __init__.py  exception_handlers.py  health.py
payment_service/src/app/api/v1/: __init__.py  payments.py
payment_service/src/app/application/exceptions/: __init__.py  idempotency.py
payment_service/src/app/application/ports/: __init__.py  correlation.py  outbox_publisher.py  (+2 more)
payment_service/src/app/core/: __init__.py  logging.py  settings.py
payment_service/src/app/domain/: __init__.py  outbox.py
payment_service/src/app/integrations/: payment_provider_client.py
payment_service/src/app/models/: __init__.py  base.py  outbox_events.py  payments.py
payment_service/src/app/repositories/: base_repository.py  outbox_repository.py  payment_repository.py
payment_service/src/app/schemas/: payments.py
payment_service/src/app/services/: outbox_relay.py  payment_service.py
payment_service/src/app/tasks/: __init__.py  sync_payments.py
payment_service/src/app/utils/: circuit_breaker.py  compute_payload_hash.py  unit_of_work.py
payment_service/src/tests/: conftest.py  test_api_payments.py  test_circuit_breaker.py  test_compute_payload_hash.py  test_consumer.py  test_contracts.py  test_correlation_publisher.py  test_idempotency_guard.py  test_idempotency_storage.py  test_integration_payment_flow.py  test_kafka_publisher.py  test_outbox_relay.py  test_payment_service.py  test_provider_adapter.py  test_reconciliation.py  test_saga_contract.py
(+241 files in other folders)
