[project]
name = "analytics-service"
version = "0.1.0"
description = ""
authors = [
    {name = "yemeal",email = "emelyalex@bk.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "dishka (>=1.10.1,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
    "aiokafka (>=0.14.0,<0.15.0)",
    "faststream[kafka] (>=0.7.1,<0.8.0)",
    "dishka-faststream (>=0.7.0,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

# аналогично payment_service: запуск pytest из корня сервиса,
# пакет app берется из src, async-тесты без обязательного маркера.
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
asyncio_mode = "auto"
addopts = "-ra"
